--- a/src/blocks/root/root.css
+++ b/src/blocks/root/root.css
@@ -10,7 +10,7 @@
     color: #ffffff;
     /* max-width: 1280px; */
     min-width: 320px;
-    /* height: 100vh; */
+    min-height: 100vh;
     width: 100%;
     margin: 0 auto;
 }
