--- a/src/blocks/popup-form/__item/_type/popup-form__item_type_error.css
+++ b/src/blocks/popup-form/__item/_type/popup-form__item_type_error.css
@@ -1,3 +1,4 @@
 .popup-form__item_type_error {
-    border-bottom: 1px solid rgba(255, 0, 0, 0.4);
+    /* border-bottom: 1px solid rgba(255, 0, 0, 0.4); */
+    background-color: rgba(255, 0, 0, 0.1);
 }
